# mcp-web-search

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
mcp_web_search/: __main__.py  app.py
